--- a/app/views/static_pages/_social_media_logins.html.haml
+++ b/app/views/static_pages/_social_media_logins.html.haml
@@ -2,12 +2,12 @@
   %ul.thumbnails
     %li.span3
       %a.thumbnail.social-thumbnail{href: "/auth/facebook"}
-        = image_tag "f_logo.png"
+        = image_tag "facebook.png"
         -# %h3.center Facebook
 
     %li.span3
       %a.thumbnail.social-thumbnail{href: "/auth/linkedin"}
-        = image_tag "LinkedIn_Logo60px.png"
+        = image_tag "linkedin.png"
         -# %h3.center Linked In
     %li.span3
       %a.thumbnail.social-thumbnail{href: "/auth/twitter"}
@@ -15,6 +15,6 @@
         -# %h3.center Twitter
     %li.span3
       %a.thumbnail.social-thumbnail{href: "/auth/google_oauth2"}
-        = image_tag "gmail.gif"
+        = image_tag "google.png"
         -# %h3.center Google
 
