embedded twitter timeline

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -223,5 +223,9 @@ home_paragraph = ""
 				</li>
 			</ul>
 		</div>
-	</div>
+	</div>	
+</div>
+<div>
+<%= render '/shared/twitter' %>
+<%# render '/shared/twitter_hashtag' %>
 </div>
