--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -209,16 +209,25 @@ footer {
   .carousel-inner {
 
     .item {
-
+      height: $carousel_height !important;
       overflow:hidden;
       h1 {
         position:absolute;
       }
       img {
-        min-height: $carousel_height !important;
+        //min-height: $carousel_height !important;
         //max-width: $carousel_width !important;
         margin: auto auto;
         clip:rect(0px $carousel_width $carousel_height 0)
+      }
+
+      .carousel-caption {
+        //background-color: rgba(200,200,200, 0.8)
+        
+        a, a:hover {
+          color: lighten($infoText, 10%);
+          font-weight: 700;
+        }
       }
     }
   }
