--- a/app/assets/stylesheets/layout/header.css.scss.erb
+++ b/app/assets/stylesheets/layout/header.css.scss.erb
@@ -6,7 +6,7 @@ header {
 	background-position: top center;
 	background-clip: border-box;
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 	min-height: 100px; 
 	//max-height: 320px;
 	
