Latest articles on home page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -30,6 +30,8 @@
                   = link_to "Download Files", content_by_name_path("downloads")
                 %li
                   = link_to "Aggregate Data", aggregate_export_path
+                %li 
+                  = link_to "Geocoding: coming soon!", content_by_name_path("geocoding")
             %li.dropdown
               %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                 Visualize
