--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -183,17 +183,7 @@ home_paragraph = ""
 			<h3>
 				In the News:
 			</h3>
-			<ul class='unstyled'>
-				<li>
-					<a href='#'>Exciting News article featuring our work!</a>
-				</li>
-				<li>
-					<a href='#'>Exciting News article featuring our work!</a>
-				</li>
-				<li>
-					<a href='#'>Exciting News article featuring our work!</a>
-				</li>
-			</ul>
+			<%= render 'latest_articles' %>
 		</div>
 		<div class='span4'>
 			<h3>
