--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,6 +21,17 @@
                   = link_to "Contact", content_by_name_path("contact")
             %li.dropdown
               %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
+                About the Data
+                %i.caret
+              %ul.dropdown-menu
+                %li
+                  = link_to "Using the Data", content_by_name_path("using_the_data")
+                %li
+                  = link_to "Improving the Data", content_by_name_path("improving_the_data")  
+                %li 
+                  = link_to "Frequently Asked Questions", content_by_name_path("faq")    
+            %li.dropdown
+              %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                 Get Data
                 %i.caret
               %ul.dropdown-menu
@@ -31,7 +42,9 @@
                 %li
                   = link_to "Aggregate Data", aggregate_export_path
                 %li 
-                  = link_to "Geocoding: coming soon!", content_by_name_path("geocoding")
+                  = link_to "Geocoding <span class='text-warning'>Coming soon!</span>".html_safe, content_by_name_path("geocoding")
+                %li
+                  = link_to "Web Service API", content_by_name_path("api_docs")
             %li.dropdown
               %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                 Visualize
