--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -71,9 +71,9 @@
                 = link_to "Sign In", signin_path
 
             - if Rails.env.development? 
-              -# %p.pull-right{ style: "margin:5px;color:#fcc;font-size:20px" }
-                -# %strong
-                  -# DEVELOPMENT
+              %p.pull-right{ style: "margin:5px;color:#fcc;font-size:20px" }
+                %strong
+                  DEV
 
     #header_content.row-fluid
       .span10.offset2
