--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,6 @@ carousel = <<EOS
 		  </ol>
 		  <div class='carousel-inner'>
 		    <div class='active item'>
-		    	<h1>Location, location...</h1>
 	    	    #{image_tag "home/darfur_map_zoom.png"}
 		    	<div class='carousel-caption'>
 		    		<h4>Geocoding: Coming Soon!</h4>
@@ -28,7 +27,7 @@ carousel = <<EOS
 		    	</div>
 		    </div>
 		    <div class='item'>
-		    	#{image_tag "oiliraq.jpg"}
+		    	#{image_tag "home/drc_map.png"}
 		    	<div class='carousel-caption'>
 		    		<h4>Contribute to the Project</h4>
 		    		<p>Help us improve and expand the database!  #{link_to "Learn more here", content_by_name_path("improving_the_data")}.</p>
