--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -136,7 +136,7 @@ home_paragraph = ""
 		<div class='span6 container-fluid'>
 
 			<div class='row-fluid'>
-				<div class='well well-small'>
+				<div class=''>
 					<%= render 'vital_stats' %>
 				</div>
 			</div>
