adds the recent activity partial

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,9 @@
 
 <%= javascript_include_tag "holder/holder" %>
 
+<div class='recent'>
+  <%= render 'shared/recent' %>
+</div>
 <%
 
 carousel = <<EOS
@@ -210,3 +213,11 @@ home_paragraph = ""
 	</div>	
 </div>
 
+<script>
+  $(document).ready(
+        function() {
+        setInterval(function() {
+          $('.recent').load('/recent');
+      }, 3000);
+  });
+</script>
