--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
 
 
-    <div class="container main with_shadow">
+    <div class="container main without_shadow">
     
     <% if flash.count > 0 %>
         <div class='alerts'>
