--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -140,6 +140,11 @@ home_paragraph = ""
 					<%= render 'vital_stats' %>
 				</div>
 			</div>
+			<div class='row-fluid'>
+				<div class=''>
+					<%= render 'shared/recent' %>
+				</div>
+			</div>
 		</div>
 	</div>
 	<%= home_buttons.html_safe %>
