--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,19 +1,20 @@
 
+/* my stuff */
+$invalidRed: #942;
+$whiteShadow: rgb(18, 30, 50) 3px 3px 3px;
+$aiddataBlue: #172137;//#1c2a43;
 
 /* Bootstrap overrides */
 
 $baseFontSize: 13px; 
-// $navbarBackground: #172237;
-$navbarBackgroundHighlight: rgba(0,0,0,0);
+//$navbarBackground: #172237;
+//$navbarBackgroundHighlight: rgba(0,0,0,0);
 $linkColor: #1146a6;
 $sansFontFamily: Arial, Tahoma, sans-serif;
 $btnInfoBackground: #63a3d1;
 $btnInfoBackgroundHighlight: #4881b6;
 $infoBackground: lighten(#63a3d1, 30%);
 $infoText: #4881b6;
-/* my stuff */
-$invalidRed: #942;
-$whiteShadow: rgb(18, 30, 50) 3px 3px 3px;
 
 
 @import "bootstrap";
@@ -42,9 +43,87 @@ html {
   visibility:hidden;
 }
 body {
-  background-color: #f9f9f9;
+  background-color: white; //#f9f9f9;
   font-family: Tahoma, Arial, sans-serif;
   line-height: 14px;
+
+  header {
+    font-size: 1.2em;
+    background-color: $aiddataBlue;
+    min-height: 100px;
+    position: relative;
+
+    .nav-pills {
+      position:absolute;
+      bottom: 0px;
+      margin-bottom:0px;
+      
+
+      li {
+
+          &.dropdown.open {
+            a {
+              color: $aiddataBlue;
+              background-color: white;
+              .caret {
+                border-top-color: $aiddataBlue !important;
+                border-bottom-color: $aiddataBlue !important;
+              }
+            }
+
+            ul a:hover {
+              color: white;
+              background-color: $aiddataBlue !important;
+              background-image: none;
+            }
+          }
+
+         a {
+          border-radius:0px;
+          color: white;
+          .caret {
+            border-top-color: #fff !important;
+            border-bottom-color: #fff !important; 
+          }
+
+          &:hover {
+            background-color: white;
+            color: $aiddataBlue;
+            
+            .caret {
+              border-top-color: $aiddataBlue !important;
+              border-bottom-color: $aiddataBlue !important;
+            }
+
+
+          }
+        
+          &.dropdown li {
+            
+            a {
+              color: $aiddataBlue;
+            }
+          }
+        }
+      }
+    #logo {
+
+        img {
+          height:100px;
+        }
+    }
+
+
+    #header_content {
+      h1 {
+        margin: auto, 180px;
+        color: white;
+        text-shadow: black 2px 2px 10px;
+        text-align:center;
+      }
+    }
+    }
+  }
 
   .with_shadow {
       box-shadow: rgba(50,50,50,.8) 0px 0px 9px;
@@ -59,6 +138,10 @@ body {
   }
 }
 
+.page-header {
+  color: $aiddataBlue;
+  border-bottom: 2px solid $aiddataBlue; 
+}
 /*
 section {
   overflow: auto;
@@ -118,12 +201,10 @@ section {
 																											/* typography */
 
 h1, h2, h3, h4, h5, h6 {
+  color: $aiddataBlue;
   line-height: 1;
 }
 
-h2 {
-  color: $grayLight;
-}
 p {
   font-size: 1em;
 }
