--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,7 @@
   .container
     .row-fluid
       .span2
-        %a#logo{ href: "http://aiddata.org", style: "position:absolute;"}
+        %a#logo{ href: "http://aiddata.org"}
           = image_tag "adt_cropped.png"
       %nav.span10
         %ul.nav.nav-pills
