--- a/app/views/exports/index.html.erb
+++ b/app/views/exports/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Exports") %>
-<% provide(:header_content, "<h1>All Exports</h1>".html_safe ) %>
+<h1 class='page-header'>All Exports</h1>
 <%# <% @proj %1> %>
 <div class="row">
   <div>
