--- a/app/views/static_pages/bubbles.html.erb
+++ b/app/views/static_pages/bubbles.html.erb
@@ -1,4 +1,9 @@
 <% provide :title, "Big Picture" %>
-<% provide :header_content, "<h1>China in Africa</h1>".html_safe %>
+
+
+<h1 class='page-header'>
+	China in Africa
+	
+</h1>
 
 <%= render "analyze_js" %>
