--- a/app/views/static_pages/csv_analyzer.html.erb
+++ b/app/views/static_pages/csv_analyzer.html.erb
@@ -6,7 +6,10 @@
 %>
 
 
-<h2> CSV Analyzer</h2>
+<h1 class='page-header'> 
+	CSV Analyzer
+</h1>
+
 <p>
 	To test a CSV, enter query string from a search URL below:
 </p>
