--- a/app/views/static_pages/map.html.erb
+++ b/app/views/static_pages/map.html.erb
@@ -1,5 +1,9 @@
 
 <% provide :title, "China in Africa" %>
-<% provide :header_content, "<h1>Country Perspective</h1>".html_safe %>
+
+<h1 class='page-header'>
+	Country Perspective
+</h1>
+
 
 <%= render partial: 'static_pages/map_js', locals: {total_projects: @total_projects} %>
