--- a/app/views/static_pages/signin.html.erb
+++ b/app/views/static_pages/signin.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Sign In") %>
-<% provide(:header_content, "<h1>Sign In Using:</h1>".html_safe) %>
-
+<h1 class='page-header'>
+	Sign In:
+</h1>
 <%= render 'social_media_logins' %>
