--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -1,37 +1,39 @@
 %ul.recent
   - count = 0
-  -Version.last(10).reverse.each do |act|
-    - type = act.item_type
-    - next unless ApplicationHelper::PROJECT_ACCESSORY_OBJECTS.include?(type) or type == 'Project'
-    -# don't want loandetails
-    - next if type == "LoanDetail"
+  - Version.last(10).reverse.each do |act|
+    :ruby
+      type = act.item_type
+      next unless ApplicationHelper::PROJECT_ACCESSORY_OBJECTS.include?(type) or type == 'Project'
+      # don't want loandetails
+      next if type == "LoanDetail"
 
-    -# only want 5
-    - next if count > 4 
+      # only want 5
+      next if count > 4 
 
-    - class_name = type.constantize
-    - id = act.item_id
-    - object = class_name.find_by_id(id)
-    - next if object.nil?
+      class_name = type.constantize
+      id = act.item_id
+      object = class_name.find_by_id(id)
+      next if object.nil?
 
-    - case act.event
-    - when "update"
-      - action = "Updated "
-    - when "destroy"
-      - next
-    - else
-      - action = "New "
-    
+      case act.event
+      when "update"
+        action = "Updated "
+      when "destroy"
+        next
+      else
+        action = "New "
+      end
+      
 
-    - url = link_to_related_project(object)
-    -# link to subheader
-    - url << "##{type}" unless type == "Project"
-    - project = related_project(object)
-    - link = link_to(project.to_english, url) unless project.nil?
+      url = link_to_related_project(object)
+      # link to subheader
+      url << "##{type}" unless type == "Project"
+      project = related_project(object)
+      link = link_to(project.to_english, url) unless project.nil?
     %li
       = "#{action} #{type.titleize}: #{link}".html_safe
 
-    - count += 1
+  - count += 1
 
 :javascript
   $(document).ready(
