--- a/app/views/shared/code_index.html.erb
+++ b/app/views/shared/code_index.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, "#{type.pluralize.capitalize}") %>
-<% provide(:first_header, "View all #{type.pluralize.capitalize}") %>
+<% provide(:first_header, "") %>
 
 
 
 <% hidden_attributes = ["created_at", "updated_at", "id", "color", "content"] %>
 
+<h1 class='page-header'>
+	View all 
+	<%= type.pluralize.capitalize %>
+</h1>
 <div class="row">
 	<% if current_user && current_user.owner==Organization.find_by_name("AidData") %>
 		<%= link_to "New #{type.singularize}", "/#{type.pluralize.downcase.gsub(/\s/, '_')}/new", class: "btn" %>
