--- a/app/views/static_pages/aggregate_exporter_page.html.erb
+++ b/app/views/static_pages/aggregate_exporter_page.html.erb
@@ -1,4 +1,6 @@
 <% provide :title, "Aggregate data" %>
-<% provide :header_content, "<h1>Make an Aggregate Dataset</h1>".html_safe %>
 
+<h1 class='page-header'>
+	Make an Aggregate Dataset
+</h1>
 <%= render partial: "aggregate_exporter", locals: @aggregator_locals %>
