--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -141,7 +141,7 @@ home_paragraph = ""
 				</div>
 			</div>
 			<div class='row-fluid'>
-				<div class=''>
+				<div class=' alert alert-warning'>
 					<%= render 'shared/recent' %>
 				</div>
 			</div>
