--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -5,10 +5,9 @@
       %i Hover to see all changes
   %ul.unstyled
     - count = 0
-    - Version.last(10).reverse.each do |act|
+    - Version.where("item_type in(?)", (ApplicationHelper::PROJECT_ACCESSORY_OBJECTS + ['Project'])).last(10).reverse.each do |act|
       :ruby
         type = act.item_type
-        next unless ApplicationHelper::PROJECT_ACCESSORY_OBJECTS.include?(type) or type == 'Project'
         # don't want loandetails
         next if type == "LoanDetail"
 
@@ -29,29 +28,42 @@
           action = "New "
         end
         
+        if type == 'Geopolitical'
+          type = 'Recipient'
+        end
 
         url = link_to_related_project(object)
         # link to subheader
         url << "##{type}" unless type == "Project"
         project = related_project(object)
-        link = link_to(project.to_english, url) unless project.nil?
-      %li
-        = "#{action} #{type.titleize}: #{link}".html_safe
-
-    - count += 1
+        link = link_to(project.title, url) unless project.nil?
+      %li.change
+        %p
+          %strong 
+            = "#{action} #{type.titleize}:"
+          = "#{link}".html_safe
+        
+          %span.muted
+            = "(#{project.to_english(exclude_title: true)})"
+          %span
+            = "#{ time_ago_in_words act.created_at} ago"
+      - count += 1
 
 :javascript
-  div = $('#recent-changes')
-  div.find('li').hide()
-  $('#recent-changes li:first-child').show()
   
-  div
+  function normal_state () {
+    $('.change').hide()
+    $('.change:first-child').show()
+  }
+
+  normal_state()
+
+  $("#recent-changes")
     .mouseenter(function() {
-      $(this).find('li').show()
+      $('.change').show()
     })
     .mouseleave(function() {
-      $(this).find('li').hide()
-      $('#recent-changes li:first-child').show()
+      normal_state()
     })
 
   setTimeout(function() {
