--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -30,7 +30,7 @@
                 %li
                   = link_to "Improving the Data", content_by_name_path("improving_the_data")  
                 %li 
-                  = link_to "Frequently Asked Questions", content_by_name_path("faq")    
+                  = link_to "Frequently Asked Questions", content_by_name_path("frequently_asked_questions")    
             %li.dropdown
               %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                 Get Data
