--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -32,7 +32,7 @@
           type = 'Recipient'
         end
 
-        url = link_to_related_project(object)
+        url = link_to_related_project(object) || ""
         # link to subheader
         url << "##{type}" unless (type == "Project" || type.nil?)
         project = related_project(object)
