catch content#data errors

--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -59,7 +59,7 @@
 
   normal_state()
 
-  $("#recent-changes")
+  $("#recent-changes").parent()
     .mouseenter(function() {
       $('.change').show()
     })
