--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,12 +60,15 @@ body {
     position: relative;
 
 
+    ul.nav {
+      margin-bottom: 0px !important;
+    }
     .nav-pills {
 
-      margin-bottom:0px;
-      position:absolute;
-      bottom: 0px;      
-
+      &.main-links{
+        margin-top: 70px;
+        background-color: $aiddataBlue;
+      }
       li {
 
           &.dropdown.open {
@@ -119,6 +122,7 @@ body {
 
     #logo {
         max-height: 100%;
+        min-width:100%;
         img {
           //height:100%;
         }
@@ -154,11 +158,8 @@ body {
   border-bottom: 2px solid $aiddataBlue; 
   margin: 10px 0px 20px 0px;
 }
-/*
-section {
-  overflow: auto;
-}
-//*/
+
+
 
 .alerts {
   margin-top: 5px;
@@ -182,23 +183,6 @@ section {
     h1 {
   margin-bottom: 10px;
   }
-
-}
-
-#vitals {
-  min-height: 120px;
-  ul {
-    li {
-      color: #101010;
-      //font-weight:  bold;
-      font-size: 1.3em;
-      margin-bottom: 8px;
-      border-bottom: 1px solid #ddd;
-    }
-  }
-}
-
-#recent-changes {
 
 }
 
@@ -290,12 +274,14 @@ footer {
     text-shadow: rgba(18, 30, 50, .4) 2px 2px 5px;
   }
 }
+
+$carousel_height: 300px;
 #home_carousel {
-  $carousel_height: 300px;
+
   $carousel_width: 600px;
   //max-width: 900px;
   //max-height: 500px;
-  margin: 20px auto 0px auto;
+  margin: 0px auto 0px auto;
   //padding: 10px;
 
   .carousel-inner {
@@ -326,7 +312,28 @@ footer {
 }
 .team-image {
   max-height: 200px;
-  border: 1px solid #333;
+  border: 1px solid $aiddataBlue;
+}
+
+#stats-box {
+  max-height: $carousel_height;
+
+  #vitals {
+    min-height: 120px;
+    ul {
+      li {
+        color: #101010;
+        //font-weight:  bold;
+        font-size: 1.3em;
+        margin-bottom: 8px;
+        border-bottom: 1px solid #ddd;
+      }
+    }
+  }
+
+  #recent-changes {
+
+  }
 }
 
                     										/* forms */
