--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,7 @@
           = image_tag "adt_cropped.png"
       %div.span10
         %nav
-          %ul.nav.nav-pills
+          %ul.nav.nav-pills.main-links
             %li 
               = link_to "Home", root_path
             %li.dropdown
@@ -20,20 +20,10 @@
                   = link_to "Methodology", content_by_name_path("methodology")
                 %li
                   = link_to "Contact", content_by_name_path("contact")
+
             %li.dropdown
               %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
-                About the Data
-                %i.caret
-              %ul.dropdown-menu
-                %li
-                  = link_to "Using the Data", content_by_name_path("using_the_data")
-                %li
-                  = link_to "Improving the Data", content_by_name_path("improving_the_data")  
-                %li 
-                  = link_to "Frequently Asked Questions", content_by_name_path("frequently_asked_questions")    
-            %li.dropdown
-              %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
-                Get Data
+                Data
                 %i.caret
               %ul.dropdown-menu
                 %li
@@ -43,9 +33,18 @@
                 %li
                   = link_to "Aggregate Data", aggregate_export_path
                 %li 
-                  = link_to "Geocoding <span class='text-warning'>Coming soon!</span>".html_safe, content_by_name_path("geocoding")
+                  = link_to "Geocoded Data <span class='text-warning'>Coming soon!</span>".html_safe, content_by_name_path("geocoding")
                 %li
                   = link_to "Web Service API", content_by_name_path("api_docs")
+                %li.divider
+                %li
+                  = link_to "Using the Data", content_by_name_path("using_the_data")
+                %li
+                  = link_to "Improving the Data", content_by_name_path("improving_the_data")  
+                %li 
+                  = link_to "Frequently Asked Questions", content_by_name_path("frequently_asked_questions")  
+                %li
+                  = link_to "Definitions/Codebook", content_by_name_path("definitions")               
             %li.dropdown
               %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                 Visualize
@@ -61,10 +60,6 @@
               = link_to "Media", content_by_name_path("media")
             
             - if signed_in? 
-              - if current_user_is_aiddata
-                = render 'layouts/project_menu'
-                %li
-                  = link_to "Edit site content", contents_path
               %li
                 = link_to "Sign out", signout_path, method: "delete"
             - else
@@ -72,6 +67,15 @@
                 = link_to "Sign In", signin_path
 
             - if Rails.env.development? 
-              %p.pull-right{ style: "margin:5px;color:#fcc;font-size:20px" }
+              %li{ style: "margin:5px;color:#fcc;font-size:20px" }
                 %strong
                   DEV
+    - if current_user_is_aiddata
+      %div.row-fluid
+        %nav.span12
+          %ul.nav.nav-pills
+            = render 'layouts/project_menu'
+            %li
+              = link_to "Edit site content", contents_path
+            %li 
+              = link_to "Users", users_path
