--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -37,7 +37,7 @@
 					Financial value of all
 					%strong
 						%a{href: "/projects?&active_string=Active&oda_like_name=ODA-like"}<> 
-							ODA-Like projects
+							ODA-Like commitments
 						= ":"
 					%span.oda_like#usd_2009.text-success
 						$<%= nice_money(oda_like.usd_2009) %>
