temp. removes download export link

--- a/app/views/export_mailer/export_request.erb
+++ b/app/views/export_mailer/export_request.erb
@@ -3,11 +3,11 @@ Thanks for visiting <a href='http://china.aiddata.org'>China.AidData.org</a>.
 Your export is attached in CSV format.
 <br />
 <br />
-Alternately, click <%= link_to "here", root_url + @export.file_path %> to
-download your export.
-<br />
+<%# Alternately, click <%= link_to "here", root_url + @export.file_path %1> to %>
+<%# download your export. %>
+<%# <br /> %>
 
-The link will be <b>deactivated after 24 hours</b>.
-<br /><br />
+<%# The link will be <b>deactivated after 24 hours</b>. %>
+<%# <br /><br /> %>
 Please feel free to contact us at <a href='mailto:china@aiddata.org'>china@aiddata.org</a> if you have any questions or concerns!
 <br>
